2005-03-13  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/verifier/verify-type.c
	(TOBJ): Made static. 
	(getTOBJ) Added.

	* kaffe/kaffevm/verifier/verify-type.h: 
	(TOBJ) Removed prototype.
	(getTOBJ) Added prototype.

	* kaffe/kaffevm/verifier/verify-block.c (verifyBasicBlock), 
	kaffe/kaffevm/verifier/verify.c (checkMethodCall): 
	Use getTOBJ instead of using TOBJ directly.

2005-03-13  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.c (KGC_BLOCKS): Added.
	(gc_block_base) Made static.

	* kaffe/kaffevm/kaffe-gc/gc-mem.h (KGC_BLOCKS): Removed.

	* kaffe/kaffevm/kaffe-gc/gc-incremental.h (gc_block_base):
	Removed.

2005-03-13  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed ALIGNMENTOF_VOIDP check.

	* include/defs.h (ALIGNMENTOF_VOIDP): Define portably.

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c,
	kaffe/kaffevm/classMethod.c,
	kaffe/kaffevm/gcFuncs.c: 
	Include defs.h.

2005-03-13  Jim Huang  <jserv@kaffe.org>

	* kaffe/kaffevm/locks.c:
	(slowLockMutex): Added missing lockTime variable.

2005-03-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/locks.c
	(getHeavyLock): Changed order of heavy locking.
	(putHeavyLock): Only call KSEM(put) if it is useful.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_exit): If it is called from the main thread it will wait
	for all other non-daemon threads to exit before returning.

	* kaffe/kaffevm/jni/jni-base.c
	(KaffeJNI_DestroyJavaVM): New function.
	(JNI_CreateJavaVM): Remember the thread which has built the VM object.
	(startingThread): New variable.

	* kaffe/kaffevm/jni/jni_funcs.h
	(KaffeJNI_DestroyJavaVM): New function.

	* kaffe/kaffevm/jni/jni.c
	(Kaffe_DestroyJavaVM): Removed.
	
2005-03-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/config-jthreads.h: Define
	SIGALTSTACK_NEEDS_END if the system is IRIX.

	* kaffe/kaffevm/systems/unix-jthreads/signal.c
	(setupSigAltStack): Put a pointer to he end of the stack if