@@ -1,6 +1,16 @@
 2005-03-13  Dalibor Topic  <robilad@kaffe.org>
 
 	* kaffe/kaffevm/verifier/verify-type.c
+	(TUNSTABLE): Made static. 
+	(getTUNSTABLE) Added.
+
+	* kaffe/kaffevm/verifier/verify-type.h: 
+	(TUNSTABLE) Removed prototype.
+	(getTUNSTABLE) Added prototype.
+	
+2005-03-13  Dalibor Topic  <robilad@kaffe.org>
+
+	* kaffe/kaffevm/verifier/verify-type.c
 	(TOBJ): Made static. 
 	(getTOBJ) Added.
 
